--- a/style.css
+++ b/style.css
@@ -85,3 +85,27 @@ body {
     font-size: 1rem;
     cursor: default;
 }
+
+.owerlay {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(3px);
+}
+
+.owerlay img {
+    height: 100px;
+    width: 100px;
+}
+
+.hidden {
+    display: none;
+}
